Fix: Some visibility issues arising from recent CEMAC themes.

--- a/bungeni_custom/trunk/themes/cemac/css/skin.css
+++ b/bungeni_custom/trunk/themes/cemac/css/skin.css
@@ -33,7 +33,7 @@
     color: #fff;
 }
 #top-layer ul#portal-personaltools li a:hover {
-    color: #888;
+    color: #fffd6e !important;
 }
 #top-layer ul#portal-languageselector {
     font-size: 100%;
@@ -42,7 +42,7 @@
     color: #fff;
 }
 #top-layer ul#portal-languageselector li a:hover {
-    color: #888;
+    color: #fffd6e !important;
 }
 #top-layer ul#portal-languageselector li.selected a {
     color: #000000;
@@ -1215,6 +1215,15 @@ div.main-column #collage h2 {
 }
 .template-workspace #portal-logo img {
     border: 0 none;
+}
+.template-workspace #top-layer ul#portal-personaltools li a:hover {
+    color: #fffd6e !important;
+}
+.template-workspace #top-layer ul#portal-languageselector li a:hover {
+    color: #fffd6e !important;
+}
+.template-workspace #top-layer ul#portal-languageselector li.selected a:hover {
+    color: #000000;
 }
 
 /*
