--- a/bungeni_custom/trunk/themes/ecowas/css/skin.css
+++ b/bungeni_custom/trunk/themes/ecowas/css/skin.css
@@ -1209,6 +1209,15 @@ div.main-column #collage h2 {
 .template-workspace #portal-logo img {
     border: 0 none;
 }
+.template-workspace #top-layer ul#portal-personaltools li a:hover {
+    color: #fffd6e;
+}
+.template-workspace #top-layer ul#portal-languageselector li a:hover {
+    color: #fffd6e;
+}
+.template-workspace #top-layer ul#portal-languageselector li.selected a:hover {
+    color: #000000;
+}
 
 /*
  * Breadcrumbs
